2022-01-11  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/rmd/*: Updated

2022-01-10  Dirk Eddelbuettel  <edd@debian.org>

        * vignettes/rmd/Rcpp.bib: Updated CRAN and R references
        * inst/bib/Rcpp.bib: Idem
        * vignettes/rmd/getCurrentVersionsOfCitedPackages.R: Updated

2022-01-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* inst/NEWS.Rd: Added entries for a few PRs since last release

	* vignettes/rmd/Rcpp.bib: Provide both url and doi entries
	* inst/bib/Rcpp.bib: Idem

2021-12-28  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add section on performance

2021-12-24  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Update usage counts

2021-12-16  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/rmd/Rcpp.bib: Update JSS references to new doi scheme,
	update http URL links to https
	* inst/bib/Rcpp.bib: Idem

2021-12-10  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version
	* inst/include/Rcpp/config.h: Idem

2021-12-08  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/Rcpp: Added as new entry point
	* inst/include/Rcpp/Light: Added as lighter-weight entry point
	* inst/include/Rcpp/Lighter: Idem
	* inst/include/Rcpp/Lightest: Idem

2021-11-30  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Remove Travis badge
	* .travis.yml: Removed

2021-11-15  Dirk Eddelbuettel  <edd@debian.org>

	* docker/ci/Dockerfile: Minor cleanup

2021-11-14  Dirk Eddelbuettel  <edd@debian.org>

	* R/RcppLdpath.R: Simplified as we no longer need to worry about CXX0X

2021-11-11  Kevin Ushey  <kevinushey@gmail.com>

	* R/RcppLdpath.R: CxxFlags() now quotes its include path

2021-10-15  Travers Ching  <traversc@gmail.com>

	* inst/tinytest/testRcppAttributePackage: Tests `signature` attribute
	* inst/tinytest/test_attribute_package.R: Tests `signature` attribute

2021-10-13  Dirk Eddelbuettel  <edd@debian.org>
